refactor(api): split auth and snippets into domain slices and hydrate catalog from backend